force-app/main/default/objects/AI_Action_Policy__mdt/AI_Action_Policy__mdt.object-meta.xml
<CustomObject>
    <label>AI Action Policy</label>
    <pluralLabel>AI Action Policies</pluralLabel>
</CustomObject>