force-app/main/default/objects/AI_Action_Policy__mdt/fields/Action_Key__c.field-meta.xml
<CustomField>
    <fullName>Action_Key__c</fullName>
    <label>Action Key</label>
    <length>80</length>
    <type>Text</type>
    <required>true</required>
</CustomField>