force-app/main/default/objects/AI_Action_Policy__mdt/fields/Requires_Permission__c.field-meta.xml
<CustomField>
    <fullName>Requires_Permission__c</fullName>
    <description
  >A custom permission name re-checked at execute time, not just propose time.</description>
    <label>Requires Permission</label>
    <length>80</length>
    <type>Text</type>
</CustomField>