force-app/main/default/objects/AI_Action_Policy__mdt/fields/Target_Command_Service__c.field-meta.xml
<CustomField>
    <fullName>Target_Command_Service__c</fullName>
    <description
  >Documents which Apex command service/method AgentActionGatewayService.executeAction() dispatches this action to (e.g. 'RenewalCommandService.approve') - informational for admins, the actual dispatch mapping is a compiled switch in AgentActionGatewayService, not dynamically invoked from this text.</description>
    <label>Target Command Service</label>
    <length>120</length>
    <type>Text</type>
    <required>true</required>
</CustomField>