force-app/main/default/objects/AI_Action_Policy__mdt/fields/Use_Case_Key__c.field-meta.xml
<CustomField>
    <fullName>Use_Case_Key__c</fullName>
    <label>Use Case Key</label>
    <length>80</length>
    <type>Text</type>
    <required>true</required>
</CustomField>